--- a/web-scraping-chatgpt/src/WebScraping.ChatGpt.Grpc/WebScraping.ChatGpt.Grpc.csproj
+++ b/web-scraping-chatgpt/src/WebScraping.ChatGpt.Grpc/WebScraping.ChatGpt.Grpc.csproj
@@ -10,6 +10,10 @@
     <ProjectReference Include="..\WebScraping.ChatGpt.Infrastructure\WebScraping.ChatGpt.Infrastructure.csproj" />
   </ItemGroup>
 
+    <ItemGroup>
+    <ProjectReference Include="..\WebScraping.ChatGpt.Application\WebScraping.ChatGpt.Application.csproj" />
+  </ItemGroup>
+
   <ItemGroup>
     <Protobuf Include="Protos\webScraping.proto" GrpcServices="Server" />
   </ItemGroup>
