add integração com chatgpt nos projetos

--- a/web-scraping-chatgpt/src/WebScraping.ChatGpt.Grpc/WebScraping.ChatGpt.Grpc.csproj
+++ b/web-scraping-chatgpt/src/WebScraping.ChatGpt.Grpc/WebScraping.ChatGpt.Grpc.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Protobuf Include="Protos\webScraping.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\chatGpt.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
