--- a/web-scraping-chatgpt/src/WebScraping.ChatGpt.Infrastructure/WebScraping.ChatGpt.Infrastructure.csproj
+++ b/web-scraping-chatgpt/src/WebScraping.ChatGpt.Infrastructure/WebScraping.ChatGpt.Infrastructure.csproj
@@ -11,6 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
+    <PackageReference Include="OpenAI.ChatGPT" Version="3.3.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.18.1" />
   </ItemGroup>
 
