--- a/web-scraping-chatgpt/src/WebScraping.ChatGpt.Grpc/appsettings.Development.json
+++ b/web-scraping-chatgpt/src/WebScraping.ChatGpt.Grpc/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "open-ai-api": "https://api.openai.com/"
+
 }
