--- a/chatbot-whatsapp/src/package.json
+++ b/chatbot-whatsapp/src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.10.5",
     "@grpc/proto-loader": "^0.7.12",
+    "dotenv": "^16.4.5",
     "grpc-tools": "^1.12.4",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
