--- a/chatbot-whatsapp/src/Dockerfile
+++ b/chatbot-whatsapp/src/Dockerfile
@@ -1,11 +1,36 @@
 FROM node:alpine
 
-USER root
-RUN apk update && \
-    apk upgrade && \
-    apk add --update ca-certificates && \
-    apk add chromium --update-cache --repository http://nl.alpinelinux.org/alpine/edge/community \
-    rm -rf /var/cache/apk/*
+# RUN apk update && \
+#     apk upgrade && \
+#     apk add --update ca-certificates && \
+#     apk add chromium --update-cache --repository http://nl.alpinelinux.org/alpine/edge/community \
+#     rm -rf /var/cache/apk/*
+
+
+RUN apk add --no-cache \
+    chromium \
+    nss \
+    freetype \
+    harfbuzz \
+    ca-certificates \
+    ttf-freefont \
+    nodejs \
+    yarn
+    
+# Tell Puppeteer to skip installing Chrome. We'll be using the installed package.
+ENV PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+
+# Puppeteer v13.5.0 works with Chromium 100.
+RUN yarn add puppeteer@13.5.0
+
+# Add user so we don't need --no-sandbox.
+RUN addgroup -S pptruser && adduser -S -G pptruser pptruser \
+    && mkdir -p /home/pptruser/Downloads /app \
+    && chown -R pptruser:pptruser /home/pptruser \
+    && chown -R pptruser:pptruser /app
+
+# Run everything after as non-privileged user.
+USER pptruser
 
 WORKDIR /usr/src/app
 
