--- a/chatbot-whatsapp/src/package.json
+++ b/chatbot-whatsapp/src/package.json
@@ -15,7 +15,9 @@
     "@grpc/proto-loader": "^0.7.12",
     "dotenv": "^16.4.5",
     "grpc-tools": "^1.12.4",
+    "mongoose": "^8.4.0",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.23.0",
+    "wwebjs-mongo": "^1.1.0"
   }
 }
