add api para projeto webscraping-openai, add dockerfile api e grpc e alterado docker compose e render.yaml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   webscraping-openai:
     build:
       context: ./webscraping-openai
+      dockerfile: Dockerfile.grpc
     container_name: webscraping-openai
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
