--- a/webscraping-openai/Dockerfile.api
+++ b/webscraping-openai/Dockerfile.api
@@ -7,7 +7,7 @@ COPY /src/WebScraping.OpenAI.Application/*.csproj ./WebScraping.OpenAI.Applicati
 COPY /src/WebScraping.OpenAI.Domain/*.csproj ./WebScraping.OpenAI.Domain/
 COPY /src/WebScraping.OpenAI.Infrastructure/*.csproj ./WebScraping.OpenAI.Infrastructure/
 COPY /src/WebScraping.OpenAI.IoC/*.csproj ./WebScraping.OpenAI.IoC/
-COPY /src/WebScraping.OpenAI.Grpc/*.json ./WebScraping.OpenAI.Grpc/
+COPY /src/WebScraping.OpenAI.Api/*.json ./WebScraping.OpenAI.Api/
 RUN dotnet restore
 
 WORKDIR /src/WebScraping.OpenAI.Api/
