alterado dockerfiles api e grpc

--- a/webscraping-openai/Dockerfile.grpc
+++ b/webscraping-openai/Dockerfile.grpc
@@ -3,6 +3,7 @@ WORKDIR /src
 
 COPY /src/*.sln .
 COPY /src/WebScraping.OpenAI.Grpc/*.csproj ./WebScraping.OpenAI.Grpc/
+COPY /src/WebScraping.OpenAI.Api/*.csproj ./WebScraping.OpenAI.Api/
 COPY /src/WebScraping.OpenAI.Application/*.csproj ./WebScraping.OpenAI.Application/
 COPY /src/WebScraping.OpenAI.Domain/*.csproj ./WebScraping.OpenAI.Domain/
 COPY /src/WebScraping.OpenAI.Infrastructure/*.csproj ./WebScraping.OpenAI.Infrastructure/
