--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: webscraping-openai
     runtime: docker
-    dockerfilePath: ./webscraping-openai/Dockerfile.api
+    dockerfilePath: ./webscraping-openai/Dockerfile.grpc
     dockerContext: ./webscraping-openai/
     plan: free
     envVars:
