--- a/webscraping-openai/src/WebScraping.OpenAI.Grpc/appsettings.json
+++ b/webscraping-openai/src/WebScraping.OpenAI.Grpc/appsettings.json
@@ -9,6 +9,9 @@
   "Kestrel": {
     "EndpointDefaults": {
       "Protocols": "Http2"
+    },
+    "HttpsDefaultCert": {
+      "Url": "https://localhost:5001"
     }
   },
   "open-ai-api": "https://api.openai.com/"
