add README e correções projeto

--- a/chatbot-whatsapp/src/package.json
+++ b/chatbot-whatsapp/src/package.json
@@ -15,6 +15,6 @@
     "@grpc/proto-loader": "^0.7.12",
     "grpc-tools": "^1.12.4",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus"
+    "whatsapp-web.js": "^1.26.0"
   }
 }
